# tensorflow_cpp

./: CMakeLists.txt  configure
src/: main.cpp  objdet.hpp  objdet_example.hpp
test/: test.cpp
